syntax = "proto3";

package notification;
option go_package = "./proto";

service NotificationService {
    rpc CreateNotification (InsertNotificationRequest) returns (InsertNotificationResponse);
    rpc GetUnsendNotification (Empty) returns (GetUnsendNotificationResponse);
    rpc UpdateIsSendNotification (UpdateIsSendNotificationRequest) returns (Empty);
}

message Notification {
    uint32 id = 1;
    string email = 2;
    string message = 3;
    string type = 4;
    bool is_send = 5;
}

message InsertNotificationRequest {
    string email = 1;
    string message = 2;
    string type = 3;
}

message InsertNotificationResponse {
    uint32 id = 1;
}

message GetNotificationsRequest {
    string email = 1;
}

message GetUnsendNotificationResponse {
    repeated Notification notifications = 1;
}

message UpdateIsSendNotificationRequest {
    uint32 id = 1;
}

message Empty{}